Fix alignment

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -124,6 +124,7 @@ ul {
 }
 
 .grid {
+  padding: 0;
   list-style-type: none;
   margin: 0 auto;
   margin-top: 2rem;
